Fix display issues on Firefox.

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -19,6 +19,7 @@ body {
   transition-property: background-color;
   transition-duration: 0.3s;
 }
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -266,12 +267,12 @@ svg {
 
 /* Waves Footer */
 .ocean {
-  height: 200px;
+  height: 100vh;
   width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -10;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .wave {
